static/css/markdown.css
.g3-markdown-wrapper h1,
.g3-markdown-wrapper h2,
.g3-markdown-wrapper h3,
.g3-markdown-wrapper h4 {
  margin-top: 1.3em;
  margin-bottom: .6em;
}

.g3-markdown-wrapper p,
.g3-markdown-wrapper .highlight {
  margin-bottom: 1em;
}

.g3-markdown-wrapper a {
  color: #3273dc;
  cursor: pointer;
  text-decoration: none;
  font-size: 1rem;
}

.g3-markdown-wrapper img {
  max-width: 100%;
}

@media screen and (max-width: 700px) {
  .g3-markdown-wrapper {
    width: 100%;
  }

  .g3-markdown-content {
    padding: 0 20px;
  }

  .g3-markdown-wrapper pre,
  .g3-markdown-wrapper code {
    overflow-x: scroll;
    display: inline-block;
    max-width: 100%;
  }
}

